components/apps/grafana/alertmanager-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: kube-prometheus-stack
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`alertmanager.redcomet.ca`) && PathPrefix(`/`)
    services:
    - kind: Service
      name: kube-prometheus-stack-alertmanager
      port: 9093
