components/apps/grafana/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`grafana.redcomet.ca`) && (PathPrefix(`/`) || PathPrefix(`/dashboards`))
    services:
    - kind: Service
      name: kube-prometheus-stack-grafana
      port: 80
